# FinRL_Crypto

./: .gitignore  1_optimize_cpcv.py  config_main.py  environment_Alpaca.py  function_train_test.py  init_sys_env.sh  processor_Binance.py  pyproject.toml  run_multi_gpu.sh
data/5m_25000/: time_array
data/trade_data/5m_22-04-30_22-10-30/: time_array
drl_agents/: elegantrl_models.py
train/: evaluator.py
train_results/cwd_tests/model_CPCV_ppo_5m_50H_25k/: recorder.npy
train_results/res_2025-04-15__07_18_34_model_CPCV_ppo_5m_50H_25k/: logs.txt  study.pkl
train_results/res_2025-04-15__07_18_34_model_CPCV_ppo_5m_50H_25k/stored_agent/: recorder.npy
train_results/res_2025-04-15__08_27_46_model_CPCV_ppo_5m_50H_25k/: logs.txt
