[project]
name = "FinRL_Crypto"
version = "0.1.0"
description = "FinRL_Crypto"
requires-python = ">=3.9,<3.10"
dependencies = [
  "binance==0.3",
  "elegantrl==0.3.3",
  "exchange_calendars==3.3",
  "fracdiff==0.9.0",
  "gym==0.25.2",
  "joblib==1.1.1",
  "matplotlib==3.4.3",
  "numpy==1.22.2",
  "optuna==2.10.0",
  "pandas==1.3.4",
  "psutil==5.8.0",
  "python_binance==1.0.15",
  "pytz==2021.3",
  "scikit_learn==1.2.0",
  "scipy==1.8.0",
  "seaborn==0.11.2",
  "statsmodels==0.13.2",
  "stockstats==0.2.0",
  "TA_Lib==0.6.3",
  # "torch==1.9.1",
  "tqdm==4.63.0",
  "trading_calendars==2.1.1",
  "yfinance==0.1.63",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.21.0",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true