[project]
name = "FinRL_Crypto"
version = "0.1.0"
description = "FinRL_Crypto"
requires-python = "==3.10.*"
dependencies = [
  "binance==0.3",
  "elegantrl==0.3.3",
  "exchange_calendars==3.3",
  "fracdiff==0.9.0",
  "gym==0.25.2",
  "joblib==1.1.1",
  "matplotlib==3.6.*",
  "numpy==1.22.2",
  "optuna==2.10.0",
  "pandas==1.3.4",
  "psutil==5.8.0",
  "python_binance==1.0.15",
  "pytz==2021.3",
  "scikit_learn==1.2.0",
  "scipy==1.8.0",
  "seaborn==0.11.2",
  "statsmodels==0.13.2",
  "stockstats==0.4.*",        #<0.4的版本依赖int_date包，并且错误地将from_diff作为get_date_from_diff导入
  "ta_lib==0.6.*",
  "tqdm==4.63.0",
  "trading_calendars==2.1.1",
  "yfinance==0.1.63",
  # "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.21.0",
  "matplotlib-inline>=0.1.7",
  "ipython>=8.18.1",
]

[tool.uv]
# 必须配置，否则会有
# error: Requirements contain conflicting indexes for package `torch` in all marker environments:
# - https://download.pytorch.org/whl/cpu
# - https://download.pytorch.org/whl/cu124
conflicts = [
  [{ extra = "cpu" }, { extra = "gpu" }]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", extra = "gpu" }, # GPU环境用GPU源
  { index = "pytorch-cpu", extra = "cpu" }, 
]
ta_lib = [
  # 直接将 ta_lib 依赖指向本地的 wheel 文件路径
  { path = "D:/environment/Python/ta_lib-0.6.4-cp310-cp310-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.10'" },
  { path = "D:/environment/Python/ta_lib-0.6.4-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.11'" },
]
# 索引定义
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true



# 可选依赖
[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
gpu = ["torch>=2.6.0"]
