[project]
name = "FinRL_Crypto"
version = "0.1.0"
description = "FinRL_Crypto"
requires-python = "==3.11.*"
dependencies = [
  "binance==0.3",
  "elegantrl==0.3.3",
  "exchange_calendars==3.3",
  "fracdiff",
  "gym==0.25.2",
  "joblib==1.1.1",
  "matplotlib==3.6.*",
  "numpy<2",
  "optuna==2.10.0",
  "pandas<2",
  "psutil==5.8.0",
  "python_binance==1.0.15",
  "pytz==2021.3",
  "scikit_learn==1.2.0",
  "scipy==1.10.0",
  "seaborn==0.11.2",
  "statsmodels<=0.15.*",
  "stockstats==0.4.*",        #<0.4的版本依赖int_date包，并且错误地将from_diff作为get_date_from_diff导入
  "ta_lib==0.6.*",
  "tqdm==4.63.0",
  "trading_calendars==2.1.1",
  "yfinance==0.1.63",
  # "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.21.0",
  "matplotlib-inline>=0.1.7",
  "ipython>=8.18.1",
  "setuptools < 60.0", #statsmodels依赖numpy.distutils，在numpy>=1.23时被标记为弃用，在python>=3.12时被移除，旧版python要用的话需要老版setuptools？
]

[tool.uv]
# 必须配置，否则会有
# error: Requirements contain conflicting indexes for package `torch` in all marker environments:
# - https://download.pytorch.org/whl/cpu
# - https://download.pytorch.org/whl/cu124
conflicts = [
  [{ extra = "cpu" }, { extra = "gpu" }]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", extra = "gpu" }, # GPU环境用GPU源
  { index = "pytorch-cpu", extra = "cpu" }, 
]
ta_lib = [
  # 直接将 ta_lib 依赖指向本地的 wheel 文件路径
  { path = "D:/environment/Python/ta_lib-0.6.4-cp310-cp310-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.10'" },
  { path = "D:/environment/Python/ta_lib-0.6.4-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.11'" },
]
# 索引定义
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true



# 可选依赖
[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
gpu = ["torch>=2.6.0"]


[[tool.uv.dependency-metadata]]
# fracdiff的0.9.0要求python<3.10，0.9.1只在github release需要自己build并间接导致statsmodels也需build，太花时间。故尝试让uv忽略fracdiff的版本要求
name = "fracdiff"
# 省略 version 字段，这样该规则将应用于 fracdiff 的所有版本
# version = "0.9.0" 
# 关键在于这里：提供一个新的、更宽松的 requires-python 约束
# 或者直接省略此字段，相当于没有 Python 版本限制
requires-python = ">=3.7"

[[tool.uv.dependency-metadata]]
# 本项目其实只依赖elegantrl的agent部分，pybullet、box2d-py可以不依赖
name = "elegantrl"
requires-dist = [
    # "box2d-py", # 用于2D物理仿真
    "gym",
    "matplotlib",
    "numpy",
    "opencv-python",
    # "pybullet", # 用于物理仿真
    "torch"
    # ... elegantrl 的其他所有依赖，除了 pybullet
]